--- a/base32_decode.html
+++ b/base32_decode.html
@@ -43,7 +43,7 @@
       </div>
       <script src="https://cdn.jsdelivr.net/gh/emn178/hi-base32/build/base32.min.js"></script>
       <script>method = base32.decode;</script>
-    </>
+    </div>
     <div id="footer">© 2020 <a href="https://winternals.net/">Winternals.NET</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
   </body>
 </html>
