--- a/cisgppass_decode.html
+++ b/cisgppass_decode.html
@@ -31,6 +31,8 @@
         <div class="input">
           <textarea id="input" placeholder="Input"></textarea>
         </div>
+        <div class="submit">
+        </div>
         <div class="output">
           <textarea id="output" placeholder="Output"></textarea>
         </div>
