--- a/cisgppass_decode.html
+++ b/cisgppass_decode.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Base32 online decode function">
-    <title>Base32 Decode Online
+    <meta name="description" content="Cisco VPN Client Password Decoder">
+    <title>Cisco VPN Client Password Decoder
     </title>
     <script>
       if (location.hostname != 'localhost') {
@@ -24,9 +24,9 @@
     <div id="body">
       <script src="js/main.js"></script>
       <div id="main">
-        <h1>Base32 Decode
+        <h1>Cisco VPN Client Password Decoder
         </h1>
-        <div class="description">Base32 online decode function
+        <div class="description">Cisco VPN Client Password Decoder
         </div>
         <div class="input">
           <textarea id="input" placeholder="Input"></textarea>
