--- a/cisgppass_decode.html
+++ b/cisgppass_decode.html
@@ -7,6 +7,31 @@
     <meta name="description" content="Cisco VPN Client Password Decoder">
     <title>Cisco VPN Client Password Decoder
     </title>
+	<script src="https://cdn.rawgit.com/artemkin/cisco-password-decoder/v1.0/forge.min.js" type="text/javascript"></script>
+    <script src="https://cdn.rawgit.com/artemkin/cisco-password-decoder/v1.0/cisco-decrypt.js" type="text/javascript"></script>
+    <script>
+      var encrypted = "";
+
+      function lookForEncryptedChange() {
+          var newEncrypted = document.getElementById("encrypted").value.trim();
+          if (newEncrypted != encrypted) {
+              encrypted = newEncrypted;
+              var decrypted = decryptPassword(encrypted);
+              if (newEncrypted != "") {
+                if (decrypted != "") {
+                  decrypted = "Password: " + decrypted;
+                } else {
+                  decrypted = "Wrong encrypted password";
+                }
+              } else {
+                decrypted = "&nbsp;";
+              }
+              document.getElementById("decrypted").innerHTML = decrypted;
+          }
+      }
+
+      setInterval(lookForEncryptedChange, 100);
+    </script>
     <script>
       if (location.hostname != 'localhost') {
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
