--- a/cisgppass_decode.html
+++ b/cisgppass_decode.html
@@ -54,12 +54,12 @@
         <div class="description">Cisco VPN Client Password Decoder
         </div>
         <div class="input">
-          <textarea id="input" placeholder="Input"></textarea>
+          <textarea id="encrypted" placeholder="Input"></textarea>
         </div>
         <div class="submit">
         </div>
         <div class="output">
-          <textarea id="output" placeholder="Output"></textarea>
+          <textarea id="decrypted" placeholder="Output"></textarea>
         </div>
       </div>
     </div>
