--- a/index.html
+++ b/index.html
@@ -105,6 +105,12 @@
           </li>
           <li><a href="syntax_highlight.html">Syntax Highlight</a></li>
         </ul>
+        <ul class="menu">
+          <li>
+            <div class="menu-group">Cisco</div>
+          </li>
+          <li><a href="cisgppass_decode.html">Cisco IPsec vpn tunnel group password decoder</a></li>
+        </ul>
       </div>
     </div>
     <div id="footer">© 2020 <a href="https://winternals.net/">Winternals.NET</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
