--- a/cisgppass_decode.html
+++ b/cisgppass_decode.html
@@ -19,7 +19,7 @@
               var decrypted = decryptPassword(encrypted);
               if (newEncrypted != "") {
                 if (decrypted != "") {
-                  decrypted = "Password: " + decrypted;
+                  decrypted = decrypted;
                 } else {
                   decrypted = "Wrong encrypted password";
                 }
