--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <li>
             <div class="menu-group">Cisco</div>
           </li>
-          <li><a href="cisgppass_decode.html">Cisco IPsec vpn tunnel group password decoder</a></li>
+          <li><a href="cisgppass_decode.html">Cisco VPN Client Password Decoder</a></li>
         </ul>
       </div>
     </div>
