--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <div class="menu-group">Cisco</div>
           </li>
           <li><a href="cisgppass_decode.html">Cisco VPN Client Password Decoder</a></li>
+          <li><a href="cistype7_decode.html">Cisco Type 7 Password Cracker</a></li>
         </ul>
       </div>
     </div>
