--- a/cistype7_decode.html
+++ b/cistype7_decode.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Cisco VPN Client Password Decoder">
     <title>Cisco VPN Client Password Decoder
     </title>
-    
+
     <script>
       if (location.hostname != 'localhost') {
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
@@ -103,7 +103,7 @@ function crackPassword(form)
           <textarea id="crypttext" placeholder="Input"></textarea>
         </div>
         <div class="submit">
-          <input id="execute" type="button" value="Decode" class="btn btn-default" onclick="crackPassword(this.form)">
+          <input type="button" value="Decode" class="btn btn-default" onclick="crackPassword(this.form)">
         </div>
         <div class="output">
           <textarea id="plaintext" placeholder="Output"></textarea>
