--- a/cistype7_decode.html
+++ b/cistype7_decode.html
@@ -42,8 +42,8 @@ function isDigit(theDigit)
 // Generate a config file ready for loading
 function crackPassword(form)
 {
-    var crypttext=form.crypttext.value.toUpperCase()
-    var plaintext=''
+    var crypttext
+    var plaintext
     var xlat="dsfd;kfoA,.iyewrkldJKDHSUBsgvca69834ncxv9873254k;fg87"
     var seed, i, val=0
 
