--- a/cistype7_decode.html
+++ b/cistype7_decode.html
@@ -42,8 +42,8 @@ function isDigit(theDigit)
 // Generate a config file ready for loading
 function crackPassword(form)
 {
-    var crypttext
-    var plaintext
+    var crypttext=''
+    var plaintext=''
     var xlat="dsfd;kfoA,.iyewrkldJKDHSUBsgvca69834ncxv9873254k;fg87"
     var seed, i, val=0
 
@@ -100,13 +100,13 @@ function crackPassword(form)
         <div class="description">Cisco Type 7 Password Cracker
         </div>
         <div class="input">
-          <textarea id="crypttext" placeholder="Input"></textarea>
+          <textarea id="crypttext" placeholder=""></textarea>
         </div>
         <div class="submit">
           <input type="button" value="Decode" class="btn btn-default" onclick="crackPassword(this.form)">
         </div>
         <div class="output">
-          <textarea id="plaintext" placeholder="Output"></textarea>
+          <textarea id="plaintext" placeholder=""></textarea>
         </div>
       </div>
     </div>
