--- a/cistype7_decode.html
+++ b/cistype7_decode.html
@@ -7,23 +7,12 @@
     <meta name="description" content="Cisco VPN Client Password Decoder">
     <title>Cisco VPN Client Password Decoder
     </title>
-
-    <script>
-      if (location.hostname != 'localhost') {
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', 'UA-44208259-6', 'auto');
-        ga('send', 'pageview');
-      }
-    </script>
-
 	<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'UA-21733018-5');
   </script>
-	
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
   </head>
@@ -47,7 +36,7 @@
       // Generate a config file ready for loading
       function crackPassword(form)
       {
-          var crypttext=document.getElementById("crypttext");
+          var crypttext=form.crypttext.value.toUpperCase()
           var plaintext=''
           var xlat="dsfd;kfoA,.iyewrkldJKDHSUBsgvca69834ncxv9873254k;fg87"
           var seed, i, val=0
@@ -101,13 +90,13 @@
         <div class="description">Cisco Type 7 Password Cracker
         </div>
         <div class="input">
-          <textarea id="crypttext" placeholder=""></textarea>
+          <input name="crypttext" size="60" type="text">
         </div>
         <div class="submit">
-          <input type="button" value="Decode" class="btn btn-default" onclick="crackPassword(this.form)">
+          <input value="Crack Password" onclick="crackPassword(this.form)" type="button">
         </div>
         <div class="output">
-          <textarea id="plaintext" placeholder=""></textarea>
+          <input name="plaintext" size="40" type="text">
         </div>
       </div>
     </div>
