--- a/cistype7_decode.html
+++ b/cistype7_decode.html
@@ -36,7 +36,7 @@
       // Generate a config file ready for loading
       function crackPassword(form)
       {
-          var crypttext=form.crypttext.value()
+          var crypttext=document.getElementById("crypttext").value;
           var plaintext=''
           var xlat="dsfd;kfoA,.iyewrkldJKDHSUBsgvca69834ncxv9873254k;fg87"
           var seed, i, val=0
