--- a/cistype7_decode.html
+++ b/cistype7_decode.html
@@ -90,13 +90,13 @@
         <div class="description">Cisco Type 7 Password Cracker
         </div>
         <div class="input">
-          <input name="crypttext" size="60" type="text">
+          <input id="crypttext" name="crypttext" size="60" type="text">
         </div>
         <div class="submit">
           <input value="Crack Password" onclick="crackPassword(this.form)" type="button">
         </div>
         <div class="output">
-          <input name="plaintext" size="40" type="text">
+          <input id="plaintext" name="plaintext" size="40" type="text">
         </div>
       </div>
     </div>
