--- a/cistype7_decode.html
+++ b/cistype7_decode.html
@@ -73,7 +73,7 @@
                   return
               }
       
-          form.plaintext.value=plaintext
+          document.getElementById("plaintext").innerHTML = plaintext;
       }
       
       -->
