--- a/cistype7_decode.html
+++ b/cistype7_decode.html
@@ -88,15 +88,17 @@
           
           -->
           </script>
-        <div class="input">
-          <textarea id="crypttext" name="crypttext" placeholder="Input"></textarea>
-        </div>
-        <div class="submit">
-          <input value="Crack Password" onclick="crackPassword(this.form)" type="button">
-        </div>
-        <div class="output">
-          <textarea id="plaintext" name="plaintext" placeholder="Output"></textarea>
-        </div>
+          <form name="never-you-mind" id="never-you-mind" action="#">
+            <div class="input">
+              <textarea id="crypttext" name="crypttext" placeholder="Input"></textarea>
+            </div>
+            <div class="submit">
+              <input value="Crack Password" onclick="crackPassword(this.form)" type="button">
+            </div>
+            <div class="output">
+              <textarea id="plaintext" name="plaintext" placeholder="Output"></textarea>
+            </div>
+          </form>
       </div>
     </div>
     <div id="footer">© 2020 <a href="https://winternals.net/">Winternals.NET</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
