--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <li>
             <div class="menu-group">Misc</div>
           </li>
-          <li><a href="syntax_highlight.html">Syntax Highlight</a></li>
+          <li><a href="text_compare.html">Text Compare</a></li>
         </ul>
         <ul class="menu">
           <li>
