--- a/text_compare.html
+++ b/text_compare.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Cisco Type 7 Password Cracker">
-    <title>Cisco Type 7 Password Cracker
+    <meta name="description" content="Text Compare!!">
+    <title>Text Compare!!
     </title>
     <script>
       if (location.hostname != 'localhost') {
@@ -24,9 +24,9 @@
     <div id="body">
       <script src="js/main.js"></script>
       <div id="main">
-        <h1>Cisco Type 7 Password Cracker
+        <h1>Text Compare!!
         </h1>
-        <div class="description">Cisco Type 7 Password Cracker
+        <div class="description">Text Compare!!
         </div>
 
         <script>
