--- a/text_compare.html
+++ b/text_compare.html
@@ -34,6 +34,7 @@
             </div>
             <div class="submit">
               <input id="submitbtn" value="Compare!" type="button">
+              <h1 id="heading" >Result!</h1>
             </div>
             <div class="output">
               <textarea id="txt2" name="txt2" placeholder="Text 2"></textarea>
