--- a/text_compare.html
+++ b/text_compare.html
@@ -34,7 +34,10 @@
             </div>
             <div class="submit">
               <input id="submitbtn" value="Compare!" type="button">
-              <h1 id="heading" >Result!</h1>
+              <label>
+                <h1 id="heading" >Result!</h1>
+              </label>
+
             </div>
             <div class="output">
               <textarea id="txt2" name="txt2" placeholder="Text 2"></textarea>
