--- a/text_compare.html
+++ b/text_compare.html
@@ -28,7 +28,7 @@
         </h1>
         <div class="description">Text Compare!!
         </div>
-          <form onsubmit="compare(); return false;" class=indexsubmit>
+          <form onsubmit="compare(); return false;">
             <div class="input">
               <textarea id="txt1" name="txt1" placeholder="Text 1"></textarea>
             </div>
