--- a/text_compare.html
+++ b/text_compare.html
@@ -25,7 +25,7 @@
       <script src="js/main.js"></script>
       <div id="main">
         <h1 id="heading" class="display-4">Compare!</h1>
-        <form onsubmit="test(); return false;" class=indexsubmit>
+        <form onsubmit="compare(); return false;" class=indexsubmit>
             <div class="form-group arealeft">
                 <label for="textarea1">Text 1</label>
                 <textarea id="txt1" class="form-control col-xs-12" id="textarea1" rows="12" cols="60" maxlength="1000" placeholder="1st text to compare..."></textarea>
