--- a/text_compare.html
+++ b/text_compare.html
@@ -26,15 +26,17 @@
       <div id="main">
         <h1 id="heading" class="display-4">Compare!</h1>
         <form onsubmit="compare(); return false;" class=indexsubmit>
-            <div class="form-group arealeft">
+            <div class="input">
                 <label for="textarea1">Text 1</label>
-                <textarea id="txt1" class="form-control col-xs-12" id="textarea1" rows="12" cols="60" maxlength="1000" placeholder="1st text to compare..."></textarea>
+                <textarea id="txt1" id="textarea1" placeholder="1st text to compare..."></textarea>
             </div>
-            <div class="form-group arearight">
+            <div class="output">
                 <label for="textarea1">Text 2</label>
-                <textarea id ="txt2" class="form-control col-xs-12" id="textarea1" rows="12" cols="60" maxlength="1000" placeholder="2nd text to compare..."></textarea>
+                <textarea id ="txt2" id="textarea1" placeholder="2nd text to compare..."></textarea>
             </div>
-            <button id ="submitbtn" type="submit" class="btn btn-lg spacebutton btn-secondary ">Submit!</button>
+            <div class="submit">
+              <button id ="submitbtn" type="submit">Compare!</button>
+            </div>
         </form>
       </div>
       <script>
