--- a/cisgppass_decode.html
+++ b/cisgppass_decode.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Cisco VPN Client Password Decoder">
     <title>Cisco VPN Client Password Decoder
     </title>
-	<script src="https://cdn.rawgit.com/artemkin/cisco-password-decoder/v1.0/forge.min.js" type="text/javascript"></script>
-    <script src="https://cdn.rawgit.com/artemkin/cisco-password-decoder/v1.0/cisco-decrypt.js" type="text/javascript"></script>
+	<script src="js/forge.min.js" type="text/javascript"></script>
+    <script src="js/cisco-decrypt.js" type="text/javascript"></script>
     <script>
       var encrypted = "";
 
