--- a/md5.html
+++ b/md5.html
@@ -44,6 +44,6 @@
       <script src="https://cdn.jsdelivr.net/gh/emn178/js-md5/build/md5.min.js"></script>
       <script>method = md5;</script>
     </div>
-    <div id="footer">© 2020 <a href="https://winternals.net/">Winternals.NET</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
+    <div id="footer">© 2020 <a href="https://kernel.az/">Winternals.NET</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
   </body>
 </html>
