--- a/text_compare.html
+++ b/text_compare.html
@@ -72,6 +72,6 @@
             }
     </script>
     </div>
-    <div id="footer">© 2020 <a href="https://winternals.net/">Winternals.NET</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
+    <div id="footer">© 2020 <a href="https://kernel.az/">Winternals.NET</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
   </body>
 </html>
