--- a/crc16_checksum.html
+++ b/crc16_checksum.html
@@ -49,6 +49,6 @@
       <script src="https://cdn.jsdelivr.net/gh/emn178/js-crc/build/crc.min.js"></script>
       <script>method = crc16;</script>
     </div>
-    <div id="footer">© 2020 <a href="https://winternals.net/">Winternals.NET</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
+    <div id="footer">© 2020 <a href="https://kernel.az/">Winternals.NET</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
   </body>
 </html>
