--- a/url_encode.html
+++ b/url_encode.html
@@ -44,6 +44,6 @@
       <script></script>
       <script>method = encodeURIComponent;</script>
     </div>
-    <div id="footer">© 2020 <a href="https://winternals.net/">Winternals.NET</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
+    <div id="footer">© 2020 <a href="https://kernel.az/">Winternals.NET</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
   </body>
 </html>
