--- a/base32_encode_file.html
+++ b/base32_encode_file.html
@@ -49,6 +49,6 @@
       <script src="https://cdn.jsdelivr.net/gh/emn178/hi-base32/build/base32.min.js"></script>
       <script>method = base32.encode;</script>
     </div>
-    <div id="footer">© 2020 <a href="https://kernel.az/">Winternals.NET</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
+    <div id="footer">© 2020 <a href="https://kernel.az/">Kernel.AZ</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
   </body>
 </html>
