--- a/html_decode.html
+++ b/html_decode.html
@@ -44,6 +44,6 @@
       <script src="https://cdn.jsdelivr.net/gh/emn178/js-htmlencode/build/htmlencode.min.js"></script>
       <script>method = htmlDecode;</script>
     </div>
-    <div id="footer">© 2020 <a href="https://kernel.az/">Winternals.NET</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
+    <div id="footer">© 2020 <a href="https://kernel.az/">Kernel.AZ</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
   </body>
 </html>
