--- a/sha224_checksum.html
+++ b/sha224_checksum.html
@@ -49,6 +49,6 @@
       <script src="https://cdn.jsdelivr.net/gh/emn178/js-sha256/build/sha256.min.js"></script>
       <script>method = sha224;</script>
     </div>
-    <div id="footer">© 2020 <a href="https://kernel.az/">Kernel.AZ</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
+    <div id="footer">© 2020 <a href="https://scrypter.dev">sCrypteR.dev</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
   </body>
 </html>
