--- a/base32_decode_file.html
+++ b/base32_decode_file.html
@@ -55,6 +55,6 @@ $(document).ready(function() {
       <script src="https://cdn.jsdelivr.net/gh/emn178/hi-base32/build/base32.min.js"></script>
       <script>method = false;</script>
     </div>
-    <div id="footer">© 2020 <a href="https://kernel.az/">Kernel.AZ</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
+    <div id="footer">© 2020 <a href="https://scrypter.dev">sCrypteR.dev</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
   </body>
 </html>
