--- a/cisgppass_decode.html
+++ b/cisgppass_decode.html
@@ -63,6 +63,6 @@
         </div>
       </div>
     </div>
-    <div id="footer">© 2020 <a href="https://kernel.az/">Kernel.AZ</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
+    <div id="footer">© 2020 <a href="https://scrypter.dev">sCrypteR.dev</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
   </body>
 </html>
