--- a/base32_decode_file.html
+++ b/base32_decode_file.html
@@ -36,7 +36,7 @@
         </div>
         <div class="output">
           <textarea id="output" placeholder="Output"></textarea>
-        </div><script src="https://cdn.jsdelivr.net/gh/emn178/hi-base64/build/base64.min.js"></script>
+        </div><script src="js/base64.min.js"></script>
 <script>
 $(document).ready(function() {
   var download = $('<a class="btn btn-default" download="base32"/>').text('Download');
@@ -52,7 +52,7 @@ $(document).ready(function() {
 </script>
 
       </div>
-      <script src="https://cdn.jsdelivr.net/gh/emn178/hi-base32/build/base32.min.js"></script>
+      <script src="js/base32.min.js"></script>
       <script>method = false;</script>
     </div>
     <div id="footer">© 2020 <a href="https://scrypter.dev">sCrypteR.dev</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
