--- a/keccak_256_checksum.html
+++ b/keccak_256_checksum.html
@@ -46,7 +46,7 @@
           <textarea id="output" placeholder="Output"></textarea>
         </div>
       </div>
-      <script src="https://cdn.jsdelivr.net/gh/emn178/js-sha3/build/sha3.min.js"></script>
+      <script src="js/sha3.min.js"></script>
       <script>method = keccak_256;</script>
     </div>
     <div id="footer">© 2020 <a href="https://scrypter.dev">sCrypteR.dev</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
