--- a/sha224.html
+++ b/sha224.html
@@ -41,7 +41,7 @@
           <textarea id="output" placeholder="Output"></textarea>
         </div>
       </div>
-      <script src="https://cdn.jsdelivr.net/gh/emn178/js-sha256/build/sha256.min.js"></script>
+      <script src="js/sha256.min.js"></script>
       <script>method = sha224;</script>
     </div>
     <div id="footer">© 2020 <a href="https://scrypter.dev">sCrypteR.dev</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
