--- a/base64_encode.html
+++ b/base64_encode.html
@@ -41,7 +41,7 @@
           <textarea id="output" placeholder="Output"></textarea>
         </div>
       </div>
-      <script src="https://cdn.jsdelivr.net/gh/emn178/hi-base64/build/base64.min.js"></script>
+      <script src="js/base64.min.js"></script>
       <script>method = base64.encode;</script>
     </div>
     <div id="footer">© 2020 <a href="https://scrypter.dev">sCrypteR.dev</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
