--- a/crc16.html
+++ b/crc16.html
@@ -41,7 +41,7 @@
           <textarea id="output" placeholder="Output"></textarea>
         </div>
       </div>
-      <script src="https://cdn.jsdelivr.net/gh/emn178/js-crc/build/crc.min.js"></script>
+      <script src="js/crc.min.js"></script>
       <script>method = crc16;</script>
     </div>
     <div id="footer">© 2020 <a href="https://scrypter.dev">sCrypteR.dev</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
