--- a/html_encode.html
+++ b/html_encode.html
@@ -41,7 +41,7 @@
           <textarea id="output" placeholder="Output"></textarea>
         </div>
       </div>
-      <script src="https://cdn.jsdelivr.net/gh/emn178/js-htmlencode/build/htmlencode.min.js"></script>
+      <script src="js/htmlencode.min.js"></script>
       <script>method = htmlEncode;</script>
     </div>
     <div id="footer">© 2020 <a href="https://scrypter.dev">sCrypteR.dev</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
