--- a/md2_file_hash.html
+++ b/md2_file_hash.html
@@ -46,7 +46,7 @@
           <textarea id="output" placeholder="Output"></textarea>
         </div>
       </div>
-      <script src="https://cdn.jsdelivr.net/gh/emn178/js-md2/build/md2.min.js"></script>
+      <script src="js/md2.min.js"></script>
       <script>method = md2;</script>
     </div>
     <div id="footer">© 2020 <a href="https://scrypter.dev">sCrypteR.dev</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
