--- a/sha384_checksum.html
+++ b/sha384_checksum.html
@@ -48,7 +48,7 @@
         </div>
       </div>
       
-      <script src="https://cdn.jsdelivr.net/gh/emn178/js-sha512/build/sha512.min.js"></script>
+      <script src="js/sha512.min.js"></script>
       <script>method = sha384;</script>
     </div>
     <div id="footer">© 2020 <a href="https://scrypter.dev">sCrypteR.dev</a>. Powered by <a href="https://www.linkedin.com/in/tehranguluzade">Tehran Guluzade</a>.</div>
